instrumented/k8s/base/cache-sync-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-sync-service
  namespace: dogbank
  labels:
    app: cache-sync-service
    tags.datadoghq.com/env: "dogbank"
    tags.datadoghq.com/service: "cache-sync-service"
    tags.datadoghq.com/version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-sync-service
  template:
    metadata:
      labels:
        app: cache-sync-service
        tags.datadoghq.com/env: "dogbank"
        tags.datadoghq.com/service: "cache-sync-service"
        tags.datadoghq.com/version: "1.0"
      annotations:
        ad.datadoghq.com/cache-sync-service.logs: '[{"source":"python","service":"cache-sync-service"}]'
    spec:
      containers:
      - name: cache-sync-service
        image: schawirin/dogbank-cache-sync-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          exec:
            command:
            - python
            - -c
            - "import redis; r=redis.Redis(host='redis', port=6379); r.ping()"
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
