instrumented/k8s/base/datadog-cluster-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datadog-cluster-agent
  namespace: dogbank
  labels:
    app: datadog-cluster-agent
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: dogbank
    app.kubernetes.io/part-of: dogbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datadog-cluster-agent
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: dogbank
      app.kubernetes.io/part-of: dogbank
  template:
    metadata:
      labels:
        app: datadog-cluster-agent
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: dogbank
        app.kubernetes.io/part-of: dogbank
    spec:
      serviceAccountName: datadog-cluster-agent
      containers:
        - name: cluster-agent
          image: gcr.io/datadoghq/cluster-agent:latest
          ports:
            - containerPort: 5005
              name: agentport
              protocol: TCP
            - containerPort: 5000
              name: metricsapi
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: datadog-cluster-agent
  namespace: dogbank
  labels:
    app: datadog-cluster-agent
spec:
  type: ClusterIP
  ports:
    - port: 5005
      targetPort: 5005
      name: agentport
  selector:
    app: datadog-cluster-agent

---
apiVersion: v1
kind: Service
metadata:
  name: datadog-cluster-agent-admission-controller
  namespace: dogbank
  labels:
    app: datadog-cluster-agent
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8000
      name: admission
  selector:
    app: datadog-cluster-agent
