instrumented/k8s/base/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  namespace: dogbank
  labels:
    app: load-generator
    tags.datadoghq.com/env: "dogbank"
    tags.datadoghq.com/service: "load-generator"
    tags.datadoghq.com/version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
        tags.datadoghq.com/env: "dogbank"
        tags.datadoghq.com/service: "load-generator"
        tags.datadoghq.com/version: "1.0"
        admission.datadoghq.com/enabled: "false"
      annotations:
        admission.datadoghq.com/enabled: "false"
        ad.datadoghq.com/load-generator.logs: '[{"source":"load-generator","service":"load-generator"}]'
    spec:
      containers:
      - name: load-generator
        image: schawirin/dogbank-load-generator:latest
        imagePullPolicy: Always
        command: ["/bin/bash", "entrypoint.sh"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: load-generator
  namespace: dogbank
  labels:
    app: load-generator
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: load-generator
  type: ClusterIP
